# LavenderHook

./: LICENSE  README.md  Version
LavenderHook/: CMakeLists.txt
LavenderHook/src/: dllmain.cpp
LavenderHook/src/assets/: Texture.h  TextureLoader.cpp  TextureLoader.h  UITextures.h
LavenderHook/src/imgui/: imgui.cpp  imgui.h  imgui_compat_keys.h  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
LavenderHook/src/input/: FocusShim.cpp  FocusShim.h  Hotkeys.cpp  Hotkeys.h  InputAutomation.cpp  InputAutomation.h  VkTable.h
LavenderHook/src/memory/: Direct11.cpp  Hooks.cpp  Hooks.h  Wndproc.cpp
LavenderHook/src/misc/: Globals.h  LogMonitor.cpp  LogMonitor.h  SoundPlayer.cpp
LavenderHook/src/ui/: ActionsOverlay.h  GUI.cpp  GUI.h  HideNotification.cpp  HideNotification.h  UIRegister.cpp  UIRegister.h  UIState.cpp  UIState.h  UIWindowBuilder.cpp  UIWindowBuilder.h  UiDispatch.cpp  UiDispatch.h
LavenderHook/src/windows/: GeneralButtonsWindow.cpp  GeneralButtonsWindow.h  HoldToKillButton.cpp  HoldToKillButton.h  MenuLogoWindow.cpp  MenuLogoWindow.h  MiscButtonsWindow.cpp  MiscButtonsWindow.h  PerformanceOverlayWindow.cpp  PerformanceOverlayWindow.h  ToggleMenuButton.cpp  ToggleMenuButton.h  (+2 more)
LavenderUpdater/: CMakeLists.txt  resources.rc.in
LavenderUpdater/src/: dllmain.cpp  logger.cpp  logger.h  updater_core.cpp  version_utils.cpp  version_utils.h
LavenderUpdater/src/assets/: resource.h
LavenderUpdater/src/core/: updater_core.cpp  updater_core.h
LavenderUpdater/src/logger/: logger.cpp
LavenderUpdater/src/misc/: version_utils.cpp
(+22 files in other folders)
